local/kaltura/styles: fixing table styles for overflow

--- a/local/kaltura/styles.css
+++ b/local/kaltura/styles.css
@@ -164,8 +164,8 @@ span.fullName {
     padding-left: 7px;
 }
 .audiocontainer {
-    width: 100%;
-    height: 100%;
+    width: 482px;
+    height: 380px;
     overflow: auto;
 }
 .audiocontainer table {
